Refatorando os codigos delete e listUser, também modificando a Views
