# api.yaml
@@ -19,7 +19,7 @@ tags:
 paths:
              
   /api/login:
-    post:
+    get:
       tags:
         - user
       summary: Logs user into the system
@@ -40,22 +40,8 @@ paths:
             type: string
       responses:
         '200':
-          description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: string
-                format:
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
             application/json:
               schema:
-                type: string
         '400':
           description: Invalid username/password supplied
   
@@ -159,27 +145,7 @@ paths:
         '400':
           description: Invalid username supplied
         '404':
-          description: User not found                        
-
-  /api/delete/{id}:
-    post:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: _id
-          in: path
-          description: The name that needs to be deleted
-          required: true
-          schema:
-            type: string
-      responses:
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found                        
+          description: User not found                                          
 
   /api/edite:
     post:
